--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Home" />
     <item
-        android:id="@+id/nav_fav"
+        android:id="@+id/favourite"
         android:icon="@drawable/ic_favorite_black_24dp"
         android:title="Favourites" />
     <item
-        android:id="@+id/nav_play"
+        android:id="@+id/nowPlaying"
         android:icon="@drawable/ic_play_arrow_black_24dp"
         android:title="Now Playing" />
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search" />
 </menu>
