--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -9,33 +9,33 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="642dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="359dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/recyclerView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="-143dp"
-        android:layout_marginEnd="21dp" />
 
     <ImageView
         android:id="@+id/stateImage"
         android:layout_width="48dp"
         android:layout_height="52dp"
-        android:layout_alignBottom="@+id/progressBar"
+        android:layout_above="@+id/seekBar"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="125dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginEnd="188dp"
+        android:layout_marginBottom="98dp"
         android:src="@drawable/ic_play_arrow_black_24dp"
         android:tag="playing" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="352dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="42dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="187dp" />
 </RelativeLayout>
