--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="@+id/fragment"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="2dp"
         app:menu="@menu/bottom_navigation" />
 
