--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,47 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Home">
 
+    <ImageView
+        android:id="@+id/stateImage"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/seekBar"
+        android:layout_marginTop="15dp"
+        android:layout_toStartOf="@id/nextImage"
+        android:src="@drawable/ic_play_arrow_black_24dp"
+        android:tag="playing" />
+
+    <ImageView
+        android:id="@+id/nextImage"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/seekBar"
+        android:layout_alignEnd="@id/seekBar"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_skip_next_black_24dp" />
+
+    <ImageView
+        android:id="@+id/previousImage"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/seekBar"
+        android:layout_marginTop="15dp"
+        android:layout_toStartOf="@id/stateImage"
+        android:src="@drawable/ic_skip_previous_black_24dp"
+        android:tag="playing" />
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/swiperefresh"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="25dp" />
+
+    <ImageView
+        android:id="@+id/currentPlayingImage"
+        android:layout_width="80dp"
+        android:layout_height="70dp"
+        android:layout_below="@id/seekBar"
+        android:layout_marginTop="5dp" />
+
+    <TextView
+        android:id="@+id/currentPlayingSong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/seekBar"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@id/currentPlayingImage"
+        android:text="Nothing is being played"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/currentPlayingBand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/currentPlayingSong"
+        android:layout_toEndOf="@id/currentPlayingImage" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="642dp">
+        android:layout_height="500dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="642dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-    <ImageView
-        android:id="@+id/stateImage"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:layout_above="@+id/seekBar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="175dp"
-        android:layout_marginEnd="188dp"
-        android:layout_marginBottom="98dp"
-        android:src="@drawable/ic_play_arrow_black_24dp"
-        android:tag="playing" />
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="187dp" />
 </RelativeLayout>
