--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="175dp">
+    android:layout_height="160dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -13,7 +13,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="20dp">
 
         <TextView
             android:id="@+id/PostSongName"
@@ -50,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="AlbumWallPaper"
+                android:scaleType="fitXY"
                 app:srcCompat="@android:color/background_dark" />
         </androidx.cardview.widget.CardView>
 
