--- a/app/src/main/res/layout/favourite_fragment.xml
+++ b/app/src/main/res/layout/favourite_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Favourite">
+    tools:context=".Activities.Favourite">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favList"
