--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,99 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.Home">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_below="@id/swiperefresh"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="300dp"
-        app:cardBackgroundColor="#FCFCFC">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#E60E0E0E"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline2"
+        tools:context=".Activities.Home">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/stateImage"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/seekBar"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/ic_play_arrow_white_24dp"
+            android:tag="playing"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/seekBar" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/stateImage"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_below="@id/seekBar"
-                android:layout_marginTop="15dp"
-                android:layout_toStartOf="@id/nextImage"
-                android:src="@drawable/ic_play_arrow_black_24dp"
-                android:tag="playing" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/currentPlayingImage"
+            android:layout_width="80dp"
+            android:layout_height="90dp"
+            android:layout_below="@id/seekBar"
+            android:layout_marginStart="15dp"
+            app:civ_border_color="#2763CC"
+            app:civ_border_width="2dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
-            <ImageView
-                android:id="@+id/nextImage"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_below="@id/seekBar"
-                android:layout_alignEnd="@id/seekBar"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/ic_skip_next_black_24dp" />
+        <TextView
+            android:id="@+id/currentPlayingSong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/seekBar"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@id/currentPlayingImage"
+            android:text="Nothing is being played"
+            android:textColor="#FDFDFD"
+            app:layout_constraintStart_toEndOf="@id/currentPlayingImage"
+            app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
-            <ImageView
-                android:id="@+id/previousImage"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_below="@id/seekBar"
-                android:layout_marginTop="15dp"
-                android:layout_toStartOf="@id/stateImage"
-                android:src="@drawable/ic_skip_previous_black_24dp"
-                android:tag="playing" />
-
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp" />
-
-            <ImageView
-                android:id="@+id/currentPlayingImage"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
-                android:layout_below="@id/seekBar"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:scaleType="fitXY" />
-
-            <TextView
-                android:id="@+id/currentPlayingSong"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/seekBar"
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@id/currentPlayingImage"
-                android:text="Nothing is being played"
-                android:textColor="#000000" />
-
-            <TextView
-                android:id="@+id/currentPlayingBand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/currentPlayingSong"
-                android:layout_toEndOf="@id/currentPlayingImage" />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/currentPlayingBand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/currentPlayingSong"
+            android:layout_marginTop="3dp"
+            android:text="Band Name"
+            android:textColor="#E6D3D2D2"
+            app:layout_constraintEnd_toEndOf="@id/currentPlayingSong"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="@id/currentPlayingSong"
+            app:layout_constraintTop_toBottomOf="@id/currentPlayingSong" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp">
+        android:background="#F2050505"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -102,5 +99,12 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.80" />
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
