--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -1,58 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
-    android:layout_height="160dp">
+    android:layout_height="wrap_content"
+    android:background="#000000">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="500dp"
-        android:layout_height="200dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="20dp">
 
         <TextView
             android:id="@+id/PostSongName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="125dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="23dp"
             android:fontFamily="sans-serif-medium"
             android:text="@string/song_name"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@id/PostAlbumPicture"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/PostSingAlbum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="125dp"
-            android:layout_marginTop="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/album_name"
-            android:textColor="#0F0F0F"
-            android:textSize="14sp" />
+            android:textColor="#BFBDBD"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@id/PostSongName"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="@id/PostSongName"
+            app:layout_constraintTop_toBottomOf="@id/PostSongName" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/PostAlbumPicture"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            app:cardCornerRadius="10dp"
-            app:cardUseCompatPadding="false">
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="#000000"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/PostAlbumPicture"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="AlbumWallPaper"
-                android:scaleType="fitXY"
-                app:srcCompat="@android:color/background_dark" />
-        </androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
