--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_shadow_start_color"
+    android:background="@drawable/login_photo"
+    android:orientation="vertical"
     tools:context="Login.LoginActivity">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="20dip"
+        android:fontFamily="cursive"
+        android:text="BandIT"
+        android:textColor="#FFFFFF"
+        android:textSize="80sp" />
     <EditText
         android:id="@+id/username"
-        android:layout_width="0dip"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dip"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="24dip"
         android:background="@drawable/text_login_shape"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#27416E"
-        android:textColorHint="#CCAAA3A3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:textColorHint="#CCAAA3A3" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="0dip"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dip"
-        android:layout_marginTop="8dip"
-        android:layout_marginEnd="24dip"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/text_login_shape"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#27416E"
@@ -40,70 +45,42 @@
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/login"
         style="@android:style/Widget.Button"
-        android:layout_width="0dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="50dp"
         android:background="@drawable/button_login_shape"
         android:enabled="true"
         android:onClick="LoginFunction"
         android:text="@string/action_sign_in_short"
         android:textColor="#AEC5C2C2"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <CheckBox
-        android:id="@+id/Remember"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dip"
-        android:buttonTint="#FFFFFF"
-        android:text="Remember me"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/button"
         style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_login_shape"
         android:onClick="registerFunction"
-        android:text="SIGN UP"
+        android:text="Sign Up"
         android:textColor="#AEC5C2C2"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/login"
-        app:layout_constraintStart_toStartOf="@+id/login"
-        app:layout_constraintTop_toBottomOf="@+id/login" />
-
-    <TextView
-        android:id="@+id/textView2"
+        android:textSize="16sp" />
+    <CheckBox
+        android:id="@+id/Remember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dip"
-        android:fontFamily="cursive"
-        android:text="BandIT"
-        android:textColor="#FFFFFF"
-        android:textSize="80sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="200dip"
+        android:layout_marginStart="140dp"
+        android:buttonTint="#FFFFFF"
+        android:text="Remember me"
+        android:textColor="#FFFFFF" />
+</LinearLayout>
