Fix login Layout 2.0

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,10 +20,11 @@
         android:textSize="80sp" />
     <EditText
         android:id="@+id/username"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
         android:background="@drawable/text_login_shape"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
@@ -34,10 +35,11 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
         android:background="@drawable/text_login_shape"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#27416E"
@@ -50,11 +52,12 @@
     <Button
         android:id="@+id/login"
         style="@android:style/Widget.Button"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginStart="70dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="70dp"
         android:background="@drawable/button_login_shape"
         android:enabled="true"
         android:onClick="LoginFunction"
@@ -65,10 +68,11 @@
     <Button
         android:id="@+id/button"
         style="@android:style/Widget.Button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="150dp"
         android:background="@drawable/button_login_shape"
         android:onClick="registerFunction"
         android:text="Sign Up"
